synopsis:     "Coq XHL Library"
description:  "Coq XHL Library"
name:         "coq-xhl"
version:      "0.1"
opam-version: "2.0"
maintainer:   "pierre-yves@strub.nu"
authors:      "Pierre-Yves Strub"
homepage:     "https://github.com/strub/xhl"
bug-reports:  "https://github.com/strub/xhl/issues"
dev-repo:     "git+https://github.com/strub/xhl"
license:      "CECILL-B"

depends: [
  "coq"                    { >= "8.10" & < "8.13~" }
  "dune"                   { >= "2.5.0" }
  "coq-mathcomp-ssreflect" { >= "1.11" & < "1.12~" }
  "coq-mathcomp-algebra"
  "coq-mathcomp-analysis"  { >= "0.3.3" }
  "coq-mathcomp-finmap"    { >= "1.5" & < "1.6~" }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
